<resources>

    <string name="app_name">EnbizziApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="title_activity_main">enbiZzi App</string>
    <string name="title_activity_calendar_list">CalendarList</string>
    <string name="title_activity_calendar_grid">CalendarGrid</string>
    <string name="title_activity_calendar_tabs">Calendario</string>
    <string name="title_detalle_salida">Detalle Salida</string>

    <string name="tab_calendario">Calendario</string>
    <string name="tab_proximas_salidas">Proximas</string>
    <string name="tab_marchas">Marchas</string>
    <string name="tab_datos">Datos</string>
    <string name="tab_mapa">Mapa</string>
    <string name="tab_orache">Orache</string>
    
    <!-- BikeCalendar -->
    <string name="lblFecha">Fecha:</string>
    <string name="lblHora">Hora:</string>
    <string name="lblRuta">Ruta:</string>
    <string name="lblRutaRetorno">Vuelta por:</string>
    <string name="lblParada">Parada:</string>
    <string name="lblKm">Km:</string>
    <string name="lblAltitudAcumulada">Alt. acumulada:</string>
    <string name="lblDificultad">Dificultad:</string>
    <string name="lblTipo">Tipo:</string>
    
    <string name="cycling_type_BMX">BMX</string>
    <string name="cycling_type_ROAD">Carretera</string>
    <string name="cycling_type_INDOOR">Indoor</string>
    <string name="cycling_type_MTB">BTT</string>
    
    <string name="difficulty_EASY">Facil</string>
    <string name="difficulty_MEDIUM">Media</string>
    <string name="difficulty_HARD">Dificil</string>
    <string name="difficulty_VERY_HARD">Muy Dificil</string>
    
    <!--  orache -->
    <string name="temperatura">Temperatura</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="viento">Viento</string>
    <string name="manyana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="probabilidad_precipitacion">Prob. Precipitacion</string>
    <string name="cargando_info_aemet">Cargando info aemet</string>
    <string name="no_obtenida_info_aemet">No se ha podido obtener informacion meteorologica</string>
    <string name="kmh">km/h</string>
    <string name="grados_temp">Cº</string>
    <string name="percent">%</string>
    

</resources>