<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblFecha"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblFecha" />
    
    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblFecha"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>

    <TextView
        android:id="@+id/lblHora"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:layout_below="@+id/lblFecha"
        android:text="@string/lblHora" />
    
    <TextView
        android:id="@+id/txtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblHora"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>

    <TextView
        android:id="@+id/lblRuta"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblHora"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblRuta" />
    
    <TextView
        android:id="@+id/txtRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblRuta"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>

    <TextView
        android:id="@+id/lblKm"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblRuta"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblKm" />
    
    <TextView
        android:id="@+id/txtKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblKm"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>

    <TextView
        android:id="@+id/lblParada"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblKm"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblParada" />
    
    <TextView
        android:id="@+id/txtParada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblParada"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>
    
    
    <TextView
        android:id="@+id/lblRutaRetorno"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblParada"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblRutaRetorno" />
    
    <TextView
        android:id="@+id/txtRutaRetorno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblRutaRetorno"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>

    <TextView
        android:id="@+id/lblDificultad"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblRutaRetorno"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblDificultad" />
    
    <TextView
        android:id="@+id/txtDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblDificultad"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>
    
    <TextView
        android:id="@+id/lblAltitudAcumulada"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblDificultad"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblAltitudAcumulada" />
    
    <TextView
        android:id="@+id/txtAltitudAcumulada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblAltitudAcumulada"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>

    <TextView
        android:id="@+id/lblTipo"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblAltitudAcumulada"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:text="@string/lblTipo" />
    
    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblTipo"
        android:layout_toRightOf="@+id/lblAltitudAcumulada"
        android:text="-"/>


</RelativeLayout>